style.css
/* ... */
.information__text,
.information__list,
.information__list a{
    font-size: 12px;
    line-height: 21px;
    font-weight: 400;
    color: #f0d8d9;
    text-decoration: none;
}

.information__text {
    margin-top: 0px;
    margin-left: -0.5px;
    margin-bottom: 20px;
    max-width: 302px;
    padding-right: 15px;
    text-align: justify;
    line-height: 22px;
}

.information__list{
    list-style: none;
    margin-left: 0;
    padding-left: 23px;
}

.information__list li {
    position: relative;
}

.information__list li::before {
    position: absolute;
    content: '';
    width: 25px;
    height: 25px;
    background-repeat: no-repeat;
    background-size: 15px;
    top: 3px;
    left: -24px;
}

.information__list .information__list--location::before {
    background-image: url('./assets/img/location_in_form.svg');
}

.information__list .information__list--phone::before {
    background-image: url(./assets/img/phone_in_form.svg);
    background-size: 15px 15px;
    left: -24px;
    top: 3px;
}

.information__list .information__list--email::before {
    top: 5px;
    background-image: url(./assets/img/mail_in_form.svg);
    background-size: 22px 17px;
    left: -26px;
}

.information__list--email {
    margin-top: 1px;
}

.footer {
    display: flex;
    flex-direction: row;
    background-color: #2d303a;
    color : #5b617a;
    font-family: 'Lato', 'Arial' ,sans-serif;
    justify-content: space-between;
    align-items: center;
    padding-left: 42px;
    padding-right: 36px;
    font-size: 12px;
    height: 76px;
    position: relative;
}

.socials--footer {
    margin-top: 0;
}

.socials--footer a:hover {
    margin-bottom: -5px;
    width: 35px;
    height: 35px;
    margin-left: 0;
    margin-right: 0;
}

.footer__copyright {
    margin-top: 11px;
    letter-spacing: -0.01em;
}

.socials--footer .socials__link {
    width: 30px;
    margin-right: 5px;
}

.socials--footer .socials__link--gp {
    width: 30px;
}

.slider__element--second {
    background: #648BF0;
}

.slider__element--second .phone--left,
.slider__element--second .phone--right {
    opacity: 0.5;
    bottom: 0;
    transform: scale(0.7);
    top: 37px;
}

.slider__element--second .phone--left {
    left: 198px;
}

.slider__element--second .phone--right {
    left: 73px;
}

.screen-phone {
    position: absolute;
    width: 188px;
    height: 334px;
    border-radius: 2px;
    background-color: black;
    z-index: 2;
}
.screen-phone--first {
    top: 119px;
    left: 126px;
}

.screen-phone--second {
    transform: rotate(90deg);
    top: 115px;
    left: 557px;
    width: 189px;
}

.album {
    display: flex;
    flex-wrap: wrap;
}

@media (max-width : 1020px) {
    .container {
        width: 768px;
    }

    .slider__element {
        width: 768px;
        min-height: 452px;
    }

    .slider {
        min-height: 452px;
    }

    .main-header {
        width: 768px;
    }

    .portfolio {
        background: linear-gradient(#2d303a 1075px, #323746 683px );
    }

    .album {
        height: 820px;
        padding-bottom: 68px;
    }

    .album__image {
        width: 216px;
        height: 183px;
    }
    
    .phone--left {
        width: 163px;
    }

    .phone--right {
        width: 345px;
        left: 159px;
        bottom: 42px;
    }

    .slider__element::after {
        width: 180px;
        height: 362px;
        top: 53px;
        left: 112px;
        background-image: url(./assets/img/shadow_left.png);
        background-size: 180px;
    }

    .slider__element::before {
        width: 180px;
        height: 362px;
        left: 419px;
        top: 49px;
        background-image: url(./assets/img/shadow_right.png);
        transform: rotate(90deg);
        background-size: 180px;
    }

    .slider__element--second::before {
        width: 180px;
        height: 298px;
        left: 319px;
        top: 84px;
        background-image: url(./assets/img/phone-vertical-display.png);
        transform: rotate(0deg);
        background-size: 180px;
    }

    .slider__element--second .phone--right {
        width: 168px;
    }

    .phone--middle {
        top: 26px;
        left: 140px;
        height: 432px;
        width: 227px;
    }

    .slider__element--second .phone--left, 
    .slider__element--second .phone--right {
        bottom: 0;
        top: 12px;
    }

    .slider__element--second .phone--left {
        left: 180px;
    }

    .slider__element--second .phone--right {
        left: 87px;
    }

    .about-us__image {
        width: 218px;
    }

    .form textarea,
    .form input {
        width: 442px;
    }

    .form textarea {
        height: 159px;
    }

    .information {
        margin-left: 0;
    }

    .information__text {
        padding-right: 35px;
    }
}
/* ... */

